2004-10-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-document.c: use gtk_text_buffer_set_text instead
	of rewriting it bad.

2004-10-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-plugins-engine.c: cleanup.

2004-10-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-document.[ch]: remove wrappers for line_count and char_count.
	* gedit-document-server.c: update for the above.
	* gedit-print.c: ditto.

2004-10-12  Chris Kelso  <ckelso@heliosphere.org>

	* Makefile.am: fix linking issues.

2004-10-05  Paolo Borelli  <pborelli@katamail.com>

	* gedit-command.c:
	* gedit-file.c
	* gedit-mdi-child.c:
	* gedit2.[ch]:

	Fix compilers warning recently introduced and make
	gedit_get_active_view return a GtkWidget.

2004-10-02  Paolo Borelli  <pborelli@katamail.com>

	* gedit-document.c: do not open not regular files (as devices etc),
	fixes crash reported in #153204.

2004-10-03  James Bowes  <bowes@cs.dal.ca>

	* gedit-mdi.c: (gedit_mdi_init), (gedit_mdi_drag_motion_handler),
	(gedit_mdi_drag_drop_handler), (gedit_mdi_add_view_handler),
	(gedit_mdi_set_state): Allow dropping of files onto the text view
	to open the file, even when the text view is read only. Fixes bug 
	#89881

2004-10-02  Paolo Maggi  <paolo@gnome.org>

	* gedit-file.[ch] (gedit_file_close): returns TRUE if the file has been
	really closed

	* gedit-mdi-child.c (gedit_mdi_child_tab_close_clicked): If a view is closed 
	while another one is active, re-activate the previous active view (fixes
	bug #149811: after closing a document jump to document which has been 
	open before)

2004-10-02  Paolo Borelli  <pborelli@katamail.com>

	* gedit-file.c: don't interpret escaped sequences in a filename
	as markup.

2004-10-02  Paolo Borelli  <pborelli@katamail.com>

	* gedit-file.c:
	* gedit-file-selector-util.c:
	* gedit-mdi.c:
	* gedit-mdi-child.c:
	* gedit-print.c:
	* gedit-utils.c: use a local copy of str_middle_truncate.

2004-10-02  Paolo Maggi  <paolo@gnome.org>
