@@ -1,5 +1,9 @@
 2004-10-05  Paolo Borelli  <pborelli@katamail.com>
 
+	* gedit-document.c: remove unused vars and unused func.
+
+2004-10-05  Paolo Borelli  <pborelli@katamail.com>
+
 	* gedit-document.c: use gtk_text_buffer_set_text instead
 	of rewriting it bad.
 
